# eludris.py

./: LICENSE  README.md  pyproject.toml
eludris/: __init__.py  bot.py  client.py  objects.py
eludris/ext/: commands.py
